# Vortex-R3D

./: .gitignore  .gitmodules  404.html  BEVY_017_SCENE_BUG_REPORT.md  Cargo.toml  PROJETO_EDITAL_CULTSP_2025.md  README.md  Trunk.toml  bevy-solutions.md  bevy-wgpu-guide.md  index.html  interativo_tech_analise.md  push.sh  setup_and_test.sh  test.sh  upload.html
.cargo/: config.toml
.github/: RELEASE_TEMPLATE.md  release-config.yml
.github/workflows/: _build-android.yml  _build-ios.yml  _build-linux.yml  _build-macos.yml  _build-wasm.yml  _build-windows.yml  build-android.yml  build-desktop.yml  build-web.yml  ci.yml  deploy-pages.yml  release.yml
.kiro/agents/: hautly-project.md
assets/: README.md
assets/icons/: README.md
assets/shaders/: dream_post_process.wgsl  portal_effect.wgsl  portal_transition.wgsl  spin_blur.wgsl  vortex_transition.wgsl
docs/: design.md  requirements.md  tasks.md
logs/Build WASM _ Build WASM/: 1_Set up job.txt  20_Post Run actions_checkout@v4.txt  21_Complete job.txt  2_Run actions_checkout@v4.txt  3_Setup Rust toolchain.txt  4_Cache Rust dependencies.txt  5_Cache Trunk + tools.txt  6_Install Trunk.txt  system.txt
packaging/android/: AndroidManifest-quest.xml  AndroidManifest.xml
packaging/ios/: Info.plist
packaging/linux/: techno-sutra.desktop
packaging/macos/: Info.plist
projeto/: convert_to_pdf.sh  pdf_converter_gui.py
projeto/anexos/: DOSSIE_VISUAL.md
projeto/documentos/: 02_CHECKLIST_DOCUMENTOS_OBRIGATORIOS.md  03_PROPOSTA_TECNICA_VR.md  04_PLANILHA_ORCAMENTARIA.md  05_CRONOGRAMA_EXECUCAO.md  07_PLANO_ACESSIBILIDADE.md  08_APRESENTACAO_SLIDES.md  09_PLANO_DIVULGACAO.md
projeto/pdf-converter-vue/: pnpm-lock.yaml
projeto/pdf-converter-vue/src/: App.vue
projeto/pdf-converter-vue/src/components/: MarkdownEditor.vue
projeto/pdf-converter-vue/src/styles/: app.css
projeto/pdf-converter-vue/src/themes/: index.js  themes1.js  (+1 more)
projeto/pdf_output/: 03_PROPOSTA_TECNICA_VR.html  07_PLANO_ACESSIBILIDADE.html  08_APRESENTACAO_SLIDES.html  DOSSIE_VISUAL.html  FICHA_TECNICA_MODELO.html  README.html  TEST_NEW.html  preview_test.html
projeto/styles/: main.qss  preview.html  technosutra-holographic.css
projeto/styles/themes/: default.css
projeto/templates/: TERMO_PARTICIPACAO_MODELO.md
projeto/themes/: __init__.py  base.py  classic.py  luxury.py  manager.py  preview_all_themes.html  tech.py
src/: character.rs  energy_particles.rs  js_bridge.rs  lib.rs  loading.rs  main.rs  panorama.rs  portal_transition.rs  room_audio.rs  routes.rs  upload_room.rs  vortex_transition.rs
src/book_reader/: animation.rs  content.rs  mod.rs  ui.rs
src/camera/: desktop.rs  mod.rs  vr.rs  webxr.rs
src/core/: mod.rs
src/glb_character/: mod.rs
src/holographic/: mod.rs
src/ibl/: analysis.rs  light_probe.rs  mod.rs
src/input/: desktop.rs  mod.rs  touch.rs  vr.rs  webxr.rs
src/particles/: mod.rs
src/performance/: mod.rs
src/platform/: desktop.rs  mod.rs  vr.rs  webxr.rs
src/platform/desktop/: config.rs  mod.rs
src/player/: mod.rs
src/portals/: mod.rs
src/post_process/: mod.rs
src/upload_room/: file_picker.rs  mod.rs  scene.rs  ui.rs
src/world/: mod.rs
technosutra-projeto/: README.md  preview_engine.py  techno-dump-txt.md
technosutra-projeto/documentos/: 01_ANALISE_PROJETO_VR_TECHNOSUTRA.md  06_PLANO_DEMOCRATIZACAO.md
technosutra-projeto/pdf-converter-vue/: index.html  package.json  vite.config.js
technosutra-projeto/pdf_output/: 01_ANALISE_PROJETO_VR_TECHNOSUTRA.html  02_CHECKLIST_DOCUMENTOS_OBRIGATORIOS.html  04_PLANILHA_ORCAMENTARIA.html  05_CRONOGRAMA_EXECUCAO.html  06_PLANO_DEMOCRATIZACAO.html  DECLARACAO_DOMICILIO_MODELO.html  TERMO_PARTICIPACAO_MODELO.html  TEST_CENTERED.html  TEST_FINAL.html  debug_preview.html
technosutra-projeto/templates/: DECLARACAO_DOMICILIO_MODELO.md  FICHA_TECNICA_MODELO.md
technosutra-projeto/themes/: corporate.py  gaming.py  minimal.py  nature.py  neon.py  zen.py
(+5 files in other folders)
