[package]
name = "techno_sutra"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
publish = false
authors = ["Techno Sutra"]
description = "Techno Sutra: Virtual Wisdom - Immersive Techno Sutra DEMO with VR support"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true

[features]
default = ["desktop"]
desktop = ["particles", "bevy/multi_threaded"]
particles = ["bevy_hanabi"]
vr = ["bevy_mod_openxr", "bevy_mod_xr", "particles", "bevy/multi_threaded"]
webxr = []

# Linux-specific windowing (enabled automatically on Linux desktop builds)
[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.17", default-features = false, features = ["x11", "wayland"] }

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_debug_stepping",
    "bevy_animation",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_gilrs",
    "bevy_picking",
    "bevy_input_focus",
    "bevy_post_process",
    "default_font",
    "hdr",
    "png",
    "jpeg",
    "webgl2",
    "tonemapping_luts",
    "zstd_rust",
    "ghost_nodes",
    "experimental_bevy_ui_widgets",
    "experimental_bevy_feathers",
    "smaa_luts",
] }

# Audio
bevy_kira_audio = { version = "0.24", features = ["ogg", "wav"] }

# Asset loading
bevy_asset_loader = { version = "0.24", default-features = false }

# Portals
bevy_basic_portals = { git = "https://github.com/Selene-Amanita/bevy_basic_portals", branch = "main", default-features = false }

# Egui + KBGP for keyboard/gamepad navigation
bevy_egui = "0.38"
bevy-egui-kbgp = "0.28"

# Particles (desktop only - not WASM compatible)
bevy_hanabi = { version = "0.17", default-features = false, features = ["3d"], optional = true }

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Logging
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }

# Async runtime
async-channel = "2.3"

# File dialogs (desktop only - not WASM/iOS/Android)
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios"), not(target_os = "android")))'.dependencies]
rfd = "0.17"

# VR/XR support (optional)
bevy_mod_openxr = { git = "https://github.com/awtterpip/bevy_oxr", tag = "v0.4.0", optional = true, features = ["vulkan"] }
bevy_mod_xr = { git = "https://github.com/awtterpip/bevy_oxr", tag = "v0.4.0", optional = true }

# WebXR/WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Navigator",
    "Window",
    "Document",
    "Location",
    "History",
    "Storage",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "Url",
    "Event",
    "EventTarget",
    "XrSystem",
    "XrSession",
    "XrSessionMode",
    "XrSessionInit",
    "XrRenderState",
    "XrRenderStateInit",
    "XrFrame",
    "XrView",
    "XrViewerPose",
    "XrPose",
    "XrRigidTransform",
    "XrReferenceSpace",
    "XrReferenceSpaceType",
    "XrWebGlLayer",
    "XrViewport",
    "XrInputSource",
    "XrInputSourceArray",
    "XrInputSourceEvent",
    "XrHand",
    "XrTargetRayMode",
    "XrHandedness",
    "XrSpace",
    "DomPointReadOnly",
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "console",
]

[build-dependencies]
embed-resource = "1"
